--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -1,1 +1,33 @@
-/* _definistions.scss */
+//color
+$main-color: #CCCCCC;
+$main-background-color: #2c2c2c;
+$header-color: #ECECEC;
+$info-color:#999999;
+$logo-color:#999999;
+
+//font
+$main-font-size: 16px;
+$main-font-family: sans-serif;
+$header-font-size: 32px;
+$info-font-size: 14px;
+$info-font-family: 'Quicksand', sans-serif;
+$logo-font-size: 14px;
+$logo-font-family: 'Quicksand', sans-serif;
+
+//margin alignment
+$margin-align-center: 0 auto;
+$margin-align-left: 0 auto 0 0;
+$margin-align-right: 0 0 0 auto;
+
+//dimentions
+$main-width: 640px;
+$side-width: 340px;
+$whole-width: $main-width + $side-width;
+
+$site-header-height: 44px;
+
+//mixins
+@mixin layout-main {
+	width: $main-width;
+	margin: 0 auto;
+}
