--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,10 @@ html,body {
 	font-size: $main-font-size;
 }
 
+a,a:hover,a:visited,a:active {
+	color: $main-color;
+}
+
 #SiteHeader {
 	@include layout-main;
 	height: $site-header-height;
@@ -56,7 +60,7 @@ html,body {
 	list-style: none;
 }
 
-.articleHeader {
+.articleTitle {
 	color: $header-color;
 	font-size: $header-font-size;
 }
