--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -8,6 +8,7 @@ $logo-color:#999999;
 //font
 $main-font-size: 16px;
 $main-font-family: sans-serif;
+$main-line-height: 120%;
 $header-font-size: 32px;
 $info-font-size: 14px;
 $info-font-family: 'Quicksand', sans-serif;
@@ -24,7 +25,10 @@ $main-width: 640px;
 $side-width: 340px;
 $whole-width: $main-width + $side-width;
 
-$site-header-height: 44px;
+$unit: 44px;
+$site-header-height: $unit;
+$header-margin: $unit;
+
 
 //mixins
 @mixin layout-main {
