--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Quicksand", sans-serif;
     font-size: 14px;
     line-height: 44px; }
+    #SiteHeader #Logo a {
+      text-decoration: none; }
   #SiteHeader nav {
     margin: 0 0 0 auto;
     width: 320px; }
