--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -4,6 +4,7 @@ $main-background-color: #2c2c2c;
 $header-color: #ECECEC;
 $info-color:#999999;
 $logo-color:#999999;
+$border-color:#4c4c4c;
 
 //font
 $main-font-size: 16px;
