Add #SiteHeader to search css

--- a/scss/google_site_search.scss
+++ b/scss/google_site_search.scss
@@ -1,5 +1,5 @@
 @import "definitions";
-#Main{
+#SiteHeader,#Main{
 /* Slight reset to make the preview have ample padding. */
 .cse .gsc-control-cse,
 .gsc-control-cse {
