--- a/google_site_search.css
+++ b/google_site_search.css
@@ -28,7 +28,7 @@
   #SiteHeader .cse .gsc-control-cse,
   #SiteHeader .gsc-control-cse, #Main .cse .gsc-control-cse,
   #Main .gsc-control-cse {
-    padding: 1em;
+    padding: 0;
     width: auto; }
   #SiteHeader .cse .gsc-control-wrapper-cse,
   #SiteHeader .gsc-control-wrapper-cse, #Main .cse .gsc-control-wrapper-cse,
@@ -46,7 +46,7 @@
   #SiteHeader .gsc-control-cse, #Main .cse .gsc-control-cse,
   #Main .gsc-control-cse {
     background-color: #2c2c2c;
-    border: 1px solid #2c2c2c; }
+    border: 0 none; }
   #SiteHeader .cse .gsc-control-cse:after,
   #SiteHeader .gsc-control-cse:after, #Main .cse .gsc-control-cse:after,
   #Main .gsc-control-cse:after {
@@ -104,12 +104,26 @@
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-color: #4c4c4c;
-    background-color: #2c2c2c; }
+    background-color: #2c2c2c;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#2c2c2c), to(#2c2c2c));
+    background-image: -webkit-linear-gradient(top, #2c2c2c, #2c2c2c);
+    background-image: -moz-linear-gradient(top, #2c2c2c, #2c2c2c);
+    background-image: -ms-linear-gradient(top, #2c2c2c, #2c2c2c);
+    background-image: -o-linear-gradient(top, #2c2c2c, #2c2c2c);
+    background-image: linear-gradient(top, #2c2c2c, #2c2c2c);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#2c2c2c',EndColorStr='#2c2c2c'); }
   #SiteHeader .cse input.gsc-search-button:hover,
   #SiteHeader input.gsc-search-button:hover, #Main .cse input.gsc-search-button:hover,
   #Main input.gsc-search-button:hover {
     border-color: #4c4c4c;
-    background-color: #2c2c2c; }
+    background-color: #2c2c2c;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#2c2c2c), to(#2c2c2c));
+    background-image: -webkit-linear-gradient(top, #2c2c2c, #2c2c2c);
+    background-image: -moz-linear-gradient(top, #2c2c2c, #2c2c2c);
+    background-image: -ms-linear-gradient(top, #2c2c2c, #2c2c2c);
+    background-image: -o-linear-gradient(top, #2c2c2c, #2c2c2c);
+    background-image: linear-gradient(top, #2c2c2c, #2c2c2c);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#2c2c2c',EndColorStr='#2c2c2c'); }
   #SiteHeader .cse input.gsc-search-button:focus,
   #SiteHeader input.gsc-search-button:focus, #Main .cse input.gsc-search-button:focus,
   #Main input.gsc-search-button:focus {
