--- a/scss/google_site_search.scss
+++ b/scss/google_site_search.scss
@@ -3,7 +3,7 @@
 /* Slight reset to make the preview have ample padding. */
 .cse .gsc-control-cse,
 .gsc-control-cse {
-	padding: 1em;
+	padding: 0;
 	width: auto;
 }
 .cse .gsc-control-wrapper-cse,
@@ -22,7 +22,7 @@
 .cse .gsc-control-cse,
 .gsc-control-cse {
 	background-color: $main-background-color;
-	border: 1px solid $main-background-color;
+	border: 0 none;
 }
 .cse .gsc-control-cse:after,
 .gsc-control-cse:after {
@@ -93,25 +93,25 @@ input.gsc-search-button {
 
 	border-color: $border-color;
 	background-color: $main-background-color;
-	//background-image: -webkit-gradient(linear,left top,left bottom,from(#4d90fe),to(#4787ed));
-	//background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
-	//background-image: -moz-linear-gradient(top,#4d90fe,#4787ed);
-	//background-image: -ms-linear-gradient(top,#4d90fe,#4787ed);
-	//background-image: -o-linear-gradient(top,#4d90fe,#4787ed);
-	//background-image: linear-gradient(top,#4d90fe,#4787ed);
-	//filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#4d90fe',EndColorStr='#4787ed');
+	background-image: -webkit-gradient(linear,left top,left bottom,from($main-background-color),to($main-background-color));
+	background-image: -webkit-linear-gradient(top,$main-background-color,$main-background-color);
+	background-image: -moz-linear-gradient(top,$main-background-color,$main-background-color);
+	background-image: -ms-linear-gradient(top,$main-background-color,$main-background-color);
+	background-image: -o-linear-gradient(top,$main-background-color,$main-background-color);
+	background-image: linear-gradient(top,$main-background-color,$main-background-color);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#{$main-background-color}',EndColorStr='#{$main-background-color}');
 }
 .cse input.gsc-search-button:hover,
 input.gsc-search-button:hover {
 	border-color: $border-color;
 	background-color: $main-background-color;
-	//background-image: -webkit-gradient(linear,left top,left bottom,from(#4d90fe),to(#357ae8));
-	//background-image: -webkit-linear-gradient(top,#4d90fe,#357ae8);
-	//background-image: -moz-linear-gradient(top,#4d90fe,#357ae8);
-	//background-image: -ms-linear-gradient(top,#4d90fe,#357ae8);
-	//background-image: -o-linear-gradient(top,#4d90fe,#357ae8);
-	//background-image: linear-gradient(top,#4d90fe,#357ae8);
-	//filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#4d90fe',EndColorStr='#357ae8');
+	background-image: -webkit-gradient(linear,left top,left bottom,from($main-background-color),to($main-background-color));
+	background-image: -webkit-linear-gradient(top,$main-background-color,$main-background-color);
+	background-image: -moz-linear-gradient(top,$main-background-color,$main-background-color);
+	background-image: -ms-linear-gradient(top,$main-background-color,$main-background-color);
+	background-image: -o-linear-gradient(top,$main-background-color,$main-background-color);
+	background-image: linear-gradient(top,$main-background-color,$main-background-color);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#{$main-background-color}',EndColorStr='#{$main-background-color}');
 }
 
 .cse input.gsc-search-button:focus,
