--- a/google_site_search.css
+++ b/google_site_search.css
@@ -70,7 +70,7 @@
     width: 99%; }
   #SiteHeader .gsc-input-box, #Main .gsc-input-box {
     border: 1px solid #4c4c4c;
-    background: #fff;
+    background: #2c2c2c;
     height: 25px; }
   #SiteHeader .gsc-search-box .gsc-input > input:hover,
   #SiteHeader .gsc-input-box-hover, #Main .gsc-search-box .gsc-input > input:hover,
@@ -197,14 +197,14 @@
   #SiteHeader .gsc-imageResult-classic, #Main .gsc-imageResult-column,
   #Main .gsc-imageResult-classic {
     padding: .25em;
-    border: 1px solid #fff;
+    border: 0 none;
     margin-bottom: 1em; }
   #SiteHeader .gsc-webResult.gsc-result, #Main .gsc-webResult.gsc-result {
     padding: .25em;
-    border: 1px solid #fff;
+    border: 0 none;
     margin-bottom: 0; }
   #SiteHeader .cse .gsc-webResult.gsc-result, #Main .cse .gsc-webResult.gsc-result {
-    border: 1px solid #fff;
+    border: 0 none;
     margin-bottom: 0; }
   #SiteHeader .gsc-webResult .gsc-result, #Main .gsc-webResult .gsc-result {
     padding: 10px 0 10px 0; }
@@ -217,7 +217,7 @@
   #Main .gsc-webResult.gsc-result.gsc-promotion:hover,
   #Main .gsc-results .gsc-imageResult-classic:hover,
   #Main .gsc-results .gsc-imageResult-column:hover {
-    border: 1px solid #fff; }
+    border: 0px none; }
   #SiteHeader .gs-web-image-box,
   #SiteHeader .gs-promotion-image-box, #Main .gs-web-image-box,
   #Main .gs-promotion-image-box {
@@ -246,7 +246,7 @@
   #SiteHeader .gs-web-image-box, #Main .gs-web-image-box {
     text-align: inherit; }
   #SiteHeader .gs-promotion-image-box img.gs-promotion-image, #Main .gs-promotion-image-box img.gs-promotion-image {
-    border: 1px solid #ebebeb; }
+    border: 0 none; }
   #SiteHeader .cse .gsc-webResult.gsc-result.gsc-promotion,
   #SiteHeader .gsc-webResult.gsc-result.gsc-promotion, #Main .cse .gsc-webResult.gsc-result.gsc-promotion,
   #Main .gsc-webResult.gsc-result.gsc-promotion {
@@ -472,3 +472,10 @@
     background-image: -moz-linear-gradient(top, whitesmoke, #f1f1f1);
     background-image: -ms-linear-gradient(top, whitesmoke, #f1f1f1);
     background-image: -o-linear-gradient(top, whitesmoke, #f1f1f1); }
+  #SiteHeader #gsc-i-id1, #Main #gsc-i-id1 {
+    color: #cccccc !important;
+    background-color: #2c2c2c !important; }
+  #SiteHeader .gsst_a .gscb_a, #Main .gsst_a .gscb_a {
+    color: #999999 !important; }
+  #SiteHeader gsst_a:hover .gscb_a, #SiteHeader .gsst_a:focus .gscb_a, #Main gsst_a:hover .gscb_a, #Main .gsst_a:focus .gscb_a {
+    color: #999999 !important; }
