chage base color to white

--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -1,10 +1,10 @@
 //color
-$main-color: #CCCCCC;
-$main-background-color: #2c2c2c;
-$header-color: #ECECEC;
-$info-color:#999999;
-$logo-color:#999999;
-$border-color:#4c4c4c;
+$main-color: #999999;
+$main-background-color: #FCFCFC;
+$header-color: #333333;
+$info-color:#666666;
+$logo-color:#666666;
+$border-color:#CCCCCC;
 
 //font
 $main-font-size: 16px;
