--- a/google_site_search.css
+++ b/google_site_search.css
@@ -45,7 +45,7 @@
   #SiteHeader .cse .gsc-control-cse,
   #SiteHeader .gsc-control-cse, #Main .cse .gsc-control-cse,
   #Main .gsc-control-cse {
-    background-color: #2c2c2c;
+    background-color: #fcfcfc;
     border: 0 none; }
   #SiteHeader .cse .gsc-control-cse:after,
   #SiteHeader .gsc-control-cse:after, #Main .cse .gsc-control-cse:after,
@@ -66,11 +66,11 @@
   #SiteHeader input.gsc-input, #Main input.gsc-input {
     font-size: 16px;
     padding: 4px 9px;
-    border: 1px solid #4c4c4c;
+    border: 1px solid #cccccc;
     width: 99%; }
   #SiteHeader .gsc-input-box, #Main .gsc-input-box {
-    border: 1px solid #4c4c4c;
-    background: #2c2c2c;
+    border: 1px solid #cccccc;
+    background: #fcfcfc;
     height: 25px; }
   #SiteHeader .gsc-search-box .gsc-input > input:hover,
   #SiteHeader .gsc-input-box-hover, #Main .gsc-search-box .gsc-input > input:hover,
@@ -84,7 +84,7 @@
   #SiteHeader .gsc-search-box .gsc-input > input:focus,
   #SiteHeader .gsc-input-box-focus, #Main .gsc-search-box .gsc-input > input:focus,
   #Main .gsc-input-box-focus {
-    border: 1px solid #4c4c4c;
+    border: 1px solid #cccccc;
     -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
@@ -95,35 +95,35 @@
     font-family: inherit;
     font-size: 11px;
     font-weight: bold;
-    color: #cccccc;
+    color: #999999;
     padding: 0 8px;
     height: 29px;
     min-width: 54px;
-    border: 1px solid #4c4c4c;
+    border: 1px solid #cccccc;
     border-radius: 2px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
-    border-color: #4c4c4c;
-    background-color: #2c2c2c;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#2c2c2c), to(#2c2c2c));
-    background-image: -webkit-linear-gradient(top, #2c2c2c, #2c2c2c);
-    background-image: -moz-linear-gradient(top, #2c2c2c, #2c2c2c);
-    background-image: -ms-linear-gradient(top, #2c2c2c, #2c2c2c);
-    background-image: -o-linear-gradient(top, #2c2c2c, #2c2c2c);
-    background-image: linear-gradient(top, #2c2c2c, #2c2c2c);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#2c2c2c',EndColorStr='#2c2c2c'); }
+    border-color: #cccccc;
+    background-color: #fcfcfc;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#fcfcfc), to(#fcfcfc));
+    background-image: -webkit-linear-gradient(top, #fcfcfc, #fcfcfc);
+    background-image: -moz-linear-gradient(top, #fcfcfc, #fcfcfc);
+    background-image: -ms-linear-gradient(top, #fcfcfc, #fcfcfc);
+    background-image: -o-linear-gradient(top, #fcfcfc, #fcfcfc);
+    background-image: linear-gradient(top, #fcfcfc, #fcfcfc);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc',EndColorStr='#fcfcfc'); }
   #SiteHeader .cse input.gsc-search-button:hover,
   #SiteHeader input.gsc-search-button:hover, #Main .cse input.gsc-search-button:hover,
   #Main input.gsc-search-button:hover {
-    border-color: #4c4c4c;
-    background-color: #2c2c2c;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#2c2c2c), to(#2c2c2c));
-    background-image: -webkit-linear-gradient(top, #2c2c2c, #2c2c2c);
-    background-image: -moz-linear-gradient(top, #2c2c2c, #2c2c2c);
-    background-image: -ms-linear-gradient(top, #2c2c2c, #2c2c2c);
-    background-image: -o-linear-gradient(top, #2c2c2c, #2c2c2c);
-    background-image: linear-gradient(top, #2c2c2c, #2c2c2c);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#2c2c2c',EndColorStr='#2c2c2c'); }
+    border-color: #cccccc;
+    background-color: #fcfcfc;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#fcfcfc), to(#fcfcfc));
+    background-image: -webkit-linear-gradient(top, #fcfcfc, #fcfcfc);
+    background-image: -moz-linear-gradient(top, #fcfcfc, #fcfcfc);
+    background-image: -ms-linear-gradient(top, #fcfcfc, #fcfcfc);
+    background-image: -o-linear-gradient(top, #fcfcfc, #fcfcfc);
+    background-image: linear-gradient(top, #fcfcfc, #fcfcfc);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc',EndColorStr='#fcfcfc'); }
   #SiteHeader .cse input.gsc-search-button:focus,
   #SiteHeader input.gsc-search-button:focus, #Main .cse input.gsc-search-button:focus,
   #Main input.gsc-search-button:focus {
@@ -296,7 +296,7 @@
   #Main .gs-promotion a.gs-title:link *,
   #Main .cse .gs-promotion .gs-snippet a:link,
   #Main .gs-promotion .gs-snippet a:link {
-    color: #cccccc; }
+    color: #999999; }
   #SiteHeader .cse .gs-promotion a.gs-title:visited,
   #SiteHeader .gs-promotion a.gs-title:visited,
   #SiteHeader .cse .gs-promotion a.gs-title:visited *,
@@ -308,7 +308,7 @@
   #Main .gs-promotion a.gs-title:visited *,
   #Main .cse .gs-promotion .gs-snippet a:visited,
   #Main .gs-promotion .gs-snippet a:visited {
-    color: #cccccc; }
+    color: #999999; }
   #SiteHeader .cse .gs-promotion a.gs-title:hover,
   #SiteHeader .gs-promotion a.gs-title:hover,
   #SiteHeader .cse .gs-promotion a.gs-title:hover *,
@@ -320,7 +320,7 @@
   #Main .gs-promotion a.gs-title:hover *,
   #Main .cse .gs-promotion .gs-snippet a:hover,
   #Main .gs-promotion .gs-snippet a:hover {
-    color: #cccccc; }
+    color: #999999; }
   #SiteHeader .cse .gs-promotion a.gs-title:active,
   #SiteHeader .gs-promotion a.gs-title:active,
   #SiteHeader .cse .gs-promotion a.gs-title:active *,
@@ -332,7 +332,7 @@
   #Main .gs-promotion a.gs-title:active *,
   #Main .cse .gs-promotion .gs-snippet a:active,
   #Main .gs-promotion .gs-snippet a:active {
-    color: #cccccc; }
+    color: #999999; }
   #SiteHeader .cse .gs-promotion .gs-snippet,
   #SiteHeader .gs-promotion .gs-snippet,
   #SiteHeader .cse .gs-promotion .gs-title .gs-promotion-title-right,
@@ -348,7 +348,7 @@
   #SiteHeader .cse .gs-promotion .gs-visibleUrl,
   #SiteHeader .gs-promotion .gs-visibleUrl, #Main .cse .gs-promotion .gs-visibleUrl,
   #Main .gs-promotion .gs-visibleUrl {
-    color: #cccccc; }
+    color: #999999; }
   #SiteHeader .gsc-completion-selected, #Main .gsc-completion-selected {
     background: #EEE; }
   #SiteHeader .gsc-completion-container, #Main .gsc-completion-container {
@@ -383,11 +383,11 @@
   #SiteHeader .gs-result .gs-title,
   #SiteHeader .gs-result .gs-title *, #Main .gs-result .gs-title,
   #Main .gs-result .gs-title * {
-    color: #cccccc; }
+    color: #999999; }
   #SiteHeader .gs-result a.gs-visibleUrl,
   #SiteHeader .gs-result .gs-visibleUrl, #Main .gs-result a.gs-visibleUrl,
   #Main .gs-result .gs-visibleUrl {
-    color: #cccccc;
+    color: #999999;
     text-decoration: none;
     padding-bottom: 2px; }
   #SiteHeader .gsc-results .gsc-cursor-box, #Main .gsc-results .gsc-cursor-box {
@@ -434,7 +434,7 @@
   #SiteHeader .gsc-wrapper.gsc-thinWrapper, #Main .gsc-wrapper.gsc-thinWrapper {
     border-right: 1px solid #e9e9e9; }
   #SiteHeader .gs-spelling a, #Main .gs-spelling a {
-    color: #cccccc; }
+    color: #999999; }
   #SiteHeader .gs-spelling, #Main .gs-spelling {
     color: #333;
     padding-left: 7px;
@@ -472,10 +472,7 @@
     background-image: -moz-linear-gradient(top, whitesmoke, #f1f1f1);
     background-image: -ms-linear-gradient(top, whitesmoke, #f1f1f1);
     background-image: -o-linear-gradient(top, whitesmoke, #f1f1f1); }
-  #SiteHeader #gsc-i-id1, #Main #gsc-i-id1 {
-    color: #cccccc !important;
-    background-color: #2c2c2c !important; }
   #SiteHeader .gsst_a .gscb_a, #Main .gsst_a .gscb_a {
-    color: #999999 !important; }
+    color: #666666 !important; }
   #SiteHeader gsst_a:hover .gscb_a, #SiteHeader .gsst_a:focus .gscb_a, #Main gsst_a:hover .gscb_a, #Main .gsst_a:focus .gscb_a {
-    color: #999999 !important; }
+    color: #666666 !important; }
