--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ blog.s-uni.net Theme is distributed under the terms of the GNU GPL
   border: 0 none; }
 
 html, body {
-  color: #cccccc;
-  background-color: #2c2c2c;
+  color: #999999;
+  background-color: #fcfcfc;
   font-family: sans-serif;
   font-size: 16px; }
 
 a, a:hover, a:visited, a:active {
-  color: #cccccc; }
+  color: #999999; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal; }
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
   #SiteHeader #Logo {
     float: left;
     width: 160px;
-    color: #999999;
+    color: #666666;
     font-family: "Quicksand", sans-serif;
     font-size: 14px;
     line-height: 44px; }
@@ -73,10 +73,10 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 32px; }
   .articleHeader .articleTitle {
     display: inline;
-    color: #ececec;
+    color: #333333;
     font-size: 32px; }
   .articleHeader .articleDate {
     display: inline-block;
-    color: #999999;
+    color: #666666;
     font-family: "Quicksand", sans-serif;
     font-size: 14px; }
