--- a/style.css
+++ b/style.css
@@ -43,7 +43,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 16px;
     line-height: 44px; }
     #SiteHeader #Logo a {
+      color: #999999;
       text-decoration: none; }
+      #SiteHeader #Logo a:hover, #SiteHeader #Logo a:active, #SiteHeader #Logo a:visited, #SiteHeader #Logo a:focus {
+        color: #999999;
+        text-decoration: none; }
   #SiteHeader nav {
     margin: 0 0 0 auto;
     width: 320px; }
