--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #Main {
   width: 640px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  position: relative; }
   #Main .singleArticle .articleBody {
     line-height: 120%; }
     #Main .singleArticle .articleBody p {
@@ -63,6 +64,10 @@ h1, h2, h3, h4, h5, h6 {
       margin-top: 16px;
       margin-bottom: 16px;
       padding-left: 16px; }
+  #Main #Side {
+    position: absolute;
+    top: 0;
+    left: 640px; }
 
 #SiteFooter {
   width: 640px;
