--- a/scss/style.scss
+++ b/scss/style.scss
@@ -81,12 +81,11 @@ h1,h2,h3,h4,h5,h6 {
 		}
 	}
 	#Article {
-		
+
 	}
 	#Side {
-		position: absolute;
+		@include layout-side;
 		top: 0;
-		left: 640px;
 	}
 }
 #SiteFooter {
