--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -7,11 +7,11 @@ $logo-color:#999999;
 $border-color:#CCCCCC;
 
 //font
-$main-font-size: 16px;
+$main-font-size: 32px;
 $main-font-family: sans-serif;
 $main-line-height: 120%;
-$header-font-size: 32px;
-$info-font-size: 14px;
+$header-font-size: 48px;
+$info-font-size: 24px;
 $info-font-family: 'Quicksand', sans-serif;
 $logo-font-size: 16px;
 $logo-font-family: 'Quicksand', sans-serif;
@@ -39,6 +39,6 @@ $header-margin: $unit;
 
 @mixin layout-side {
 	width: $side-width;
-	position: absolute;
+	position: fixed;
 	left: $main-width;
 }
