--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -7,13 +7,13 @@ $logo-color:#999999;
 $border-color:#CCCCCC;
 
 //font
-$main-font-size: 32px;
+$main-font-size: 14pt;
 $main-font-family: sans-serif;
 $main-line-height: 120%;
-$header-font-size: 48px;
-$info-font-size: 24px;
+$header-font-size: 20pt;
+$info-font-size: 14pt;
 $info-font-family: 'Quicksand', sans-serif;
-$logo-font-size: 16px;
+$logo-font-size: 14pt;
 $logo-font-family: 'Quicksand', sans-serif;
 
 //margin alignment
