--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html, body {
   color: #666666;
   background-color: #fcfcfc;
   font-family: sans-serif;
-  font-size: 32px; }
+  font-size: 14pt; }
 
 a, a:hover, a:visited, a:active {
   color: #666666; }
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 160px;
     color: #999999;
     font-family: "Quicksand", sans-serif;
-    font-size: 16px;
+    font-size: 14pt;
     line-height: 44px; }
     #SiteHeader #Logo a {
       color: #999999;
@@ -59,11 +59,11 @@ h1, h2, h3, h4, h5, h6 {
   #Main .singleArticle .articleBody {
     line-height: 120%; }
     #Main .singleArticle .articleBody p {
-      margin-bottom: 48px; }
+      margin-bottom: 21pt; }
     #Main .singleArticle .articleBody ul {
-      margin-top: 32px;
-      margin-bottom: 32px;
-      padding-left: 32px; }
+      margin-top: 14pt;
+      margin-bottom: 14pt;
+      padding-left: 14pt; }
   #Main #Side {
     width: 340px;
     position: fixed;
@@ -80,16 +80,16 @@ h1, h2, h3, h4, h5, h6 {
 .articleHeader {
   display: block;
   margin-bottom: 44px;
-  line-height: 48px; }
+  line-height: 20pt; }
   .articleHeader .articleTitle {
     display: inline;
     color: #333333;
-    font-size: 48px; }
+    font-size: 20pt; }
   .articleHeader .articleDate {
     display: inline-block;
     color: #999999;
     font-family: "Quicksand", sans-serif;
-    font-size: 24px; }
+    font-size: 14pt; }
 
 #SiteHeader, #Main {
   /* Slight reset to make the preview have ample padding. */
