--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -8,8 +8,8 @@ $border-color:#CCCCCC;
 
 //font
 $main-font-size: 14pt;
-$main-font-family: sans-serif;
-$main-line-height: 120%;
+$main-font-family: serif;
+$main-line-height: 150%;
 $header-font-size: 32pt;
 $info-font-size: 14pt;
 $info-font-family: 'Quicksand', sans-serif;
