--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -8,7 +8,7 @@ $border-color:#CCCCCC;
 
 //font
 $main-font-size: 14pt;
-$main-font-family: serif;
+$main-font-family: sans-serif;
 $main-line-height: 150%;
 $header-font-size: 32pt;
 $info-font-size: 14pt;
