--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -39,7 +39,8 @@ $header-margin: $unit;
 }
 
 @mixin layout-side {
-	width: $side-width;
+	width: $side-width - $unit;
+	padding: $unit/2;
 	position: absolute;
 	left: $main-width;
 }
