test color and font-size

--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -1,10 +1,10 @@
 //color
-$main-color: #666666;
+$main-color: #909090;
 $body-background-color: #FCFCFC;
 $main-background-color: #FFFFFF;
 $header-color: #333333;
-$info-color:#999999;
-$logo-color:#999999;
+$info-color:#C9C9C9;
+$logo-color:#DDDDDD;
 $border-color:#CCCCCC;
 
 //font
@@ -16,6 +16,8 @@ $info-font-size: 16pt;
 $info-font-family: 'Quicksand', sans-serif;
 $logo-font-size: 14pt;
 $logo-font-family: 'Quicksand', sans-serif;
+$list-font-size: 14pt;
+$list-info-font-size: 10pt;
 
 //margin alignment
 $margin-align-center: 0 auto;
