--- a/style.css
+++ b/style.css
@@ -20,16 +20,33 @@ blog.s-uni.net Theme is distributed under the terms of the GNU GPL
   border: 0 none; }
 
 html, body {
-  color: #666666;
+  color: #909090;
   background-color: #fcfcfc;
   font-family: sans-serif;
   font-size: 14pt; }
 
 a, a:hover, a:visited, a:active {
-  color: #666666; }
+  color: #909090; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal; }
+
+.articleList {
+  list-style: none; }
+
+.articleHeader {
+  display: block;
+  margin-bottom: 44px;
+  line-height: 1; }
+  .articleHeader .articleTitle {
+    display: inline;
+    color: #333333;
+    font-size: 32pt; }
+  .articleHeader .articleDate {
+    display: inline-block;
+    color: #c9c9c9;
+    font-family: "Quicksand", sans-serif;
+    font-size: 16pt; }
 
 #Main {
   width: 596px;
@@ -43,15 +60,15 @@ h1, h2, h3, h4, h5, h6 {
     #Main #SiteHeader #Logo {
       float: left;
       width: 160px;
-      color: #999999;
+      color: #dddddd;
       font-family: "Quicksand", sans-serif;
       font-size: 14pt;
       line-height: 44px; }
       #Main #SiteHeader #Logo a {
-        color: #999999;
+        color: #dddddd;
         text-decoration: none; }
         #Main #SiteHeader #Logo a:hover, #Main #SiteHeader #Logo a:active, #Main #SiteHeader #Logo a:visited, #Main #SiteHeader #Logo a:focus {
-          color: #999999;
+          color: #dddddd;
           text-decoration: none; }
     #Main #SiteHeader nav {
       margin: 0 0 0 auto;
@@ -72,29 +89,14 @@ h1, h2, h3, h4, h5, h6 {
     top: 0; }
     #Main #Side #NewlyArticles .articleHeader .articleTitle {
       font-size: 14pt; }
+      #Main #Side #NewlyArticles .articleHeader .articleTitle a {
+        text-decoration: none; }
     #Main #Side #NewlyArticles .articleHeader .articleDate {
-      font-size: 16pt; }
+      font-size: 10pt; }
 
 #SiteFooter {
   width: 596px;
   margin: 0 auto; }
-
-.articleList {
-  list-style: none; }
-
-.articleHeader {
-  display: block;
-  margin-bottom: 44px;
-  line-height: 32pt; }
-  .articleHeader .articleTitle {
-    display: inline;
-    color: #333333;
-    font-size: 32pt; }
-  .articleHeader .articleDate {
-    display: inline-block;
-    color: #999999;
-    font-family: "Quicksand", sans-serif;
-    font-size: 16pt; }
 
 #SiteHeader, #Main {
   /* Slight reset to make the preview have ample padding. */
@@ -193,7 +195,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: inherit;
     font-size: 11px;
     font-weight: bold;
-    color: #666666;
+    color: #909090;
     padding: 0 8px;
     height: 29px;
     min-width: 54px;
@@ -394,7 +396,7 @@ h1, h2, h3, h4, h5, h6 {
   #Main .gs-promotion a.gs-title:link *,
   #Main .cse .gs-promotion .gs-snippet a:link,
   #Main .gs-promotion .gs-snippet a:link {
-    color: #666666; }
+    color: #909090; }
   #SiteHeader .cse .gs-promotion a.gs-title:visited,
   #SiteHeader .gs-promotion a.gs-title:visited,
   #SiteHeader .cse .gs-promotion a.gs-title:visited *,
@@ -406,7 +408,7 @@ h1, h2, h3, h4, h5, h6 {
   #Main .gs-promotion a.gs-title:visited *,
   #Main .cse .gs-promotion .gs-snippet a:visited,
   #Main .gs-promotion .gs-snippet a:visited {
-    color: #666666; }
+    color: #909090; }
   #SiteHeader .cse .gs-promotion a.gs-title:hover,
   #SiteHeader .gs-promotion a.gs-title:hover,
   #SiteHeader .cse .gs-promotion a.gs-title:hover *,
@@ -418,7 +420,7 @@ h1, h2, h3, h4, h5, h6 {
   #Main .gs-promotion a.gs-title:hover *,
   #Main .cse .gs-promotion .gs-snippet a:hover,
   #Main .gs-promotion .gs-snippet a:hover {
-    color: #666666; }
+    color: #909090; }
   #SiteHeader .cse .gs-promotion a.gs-title:active,
   #SiteHeader .gs-promotion a.gs-title:active,
   #SiteHeader .cse .gs-promotion a.gs-title:active *,
@@ -430,7 +432,7 @@ h1, h2, h3, h4, h5, h6 {
   #Main .gs-promotion a.gs-title:active *,
   #Main .cse .gs-promotion .gs-snippet a:active,
   #Main .gs-promotion .gs-snippet a:active {
-    color: #666666; }
+    color: #909090; }
   #SiteHeader .cse .gs-promotion .gs-snippet,
   #SiteHeader .gs-promotion .gs-snippet,
   #SiteHeader .cse .gs-promotion .gs-title .gs-promotion-title-right,
@@ -446,7 +448,7 @@ h1, h2, h3, h4, h5, h6 {
   #SiteHeader .cse .gs-promotion .gs-visibleUrl,
   #SiteHeader .gs-promotion .gs-visibleUrl, #Main .cse .gs-promotion .gs-visibleUrl,
   #Main .gs-promotion .gs-visibleUrl {
-    color: #666666; }
+    color: #909090; }
   #SiteHeader .gsc-completion-selected, #Main .gsc-completion-selected {
     background: #EEE; }
   #SiteHeader .gsc-completion-container, #Main .gsc-completion-container {
@@ -481,11 +483,11 @@ h1, h2, h3, h4, h5, h6 {
   #SiteHeader .gs-result .gs-title,
   #SiteHeader .gs-result .gs-title *, #Main .gs-result .gs-title,
   #Main .gs-result .gs-title * {
-    color: #666666; }
+    color: #909090; }
   #SiteHeader .gs-result a.gs-visibleUrl,
   #SiteHeader .gs-result .gs-visibleUrl, #Main .gs-result a.gs-visibleUrl,
   #Main .gs-result .gs-visibleUrl {
-    color: #666666;
+    color: #909090;
     text-decoration: none;
     padding-bottom: 2px; }
   #SiteHeader .gsc-results .gsc-cursor-box, #Main .gsc-results .gsc-cursor-box {
@@ -532,7 +534,7 @@ h1, h2, h3, h4, h5, h6 {
   #SiteHeader .gsc-wrapper.gsc-thinWrapper, #Main .gsc-wrapper.gsc-thinWrapper {
     border-right: 1px solid #e9e9e9; }
   #SiteHeader .gs-spelling a, #Main .gs-spelling a {
-    color: #666666; }
+    color: #909090; }
   #SiteHeader .gs-spelling, #Main .gs-spelling {
     color: #333;
     padding-left: 7px;
@@ -571,9 +573,9 @@ h1, h2, h3, h4, h5, h6 {
     background-image: -ms-linear-gradient(top, whitesmoke, #f1f1f1);
     background-image: -o-linear-gradient(top, whitesmoke, #f1f1f1); }
   #SiteHeader .gsst_a .gscb_a, #Main .gsst_a .gscb_a {
-    color: #999999 !important; }
+    color: #c9c9c9 !important; }
   #SiteHeader gsst_a:hover .gscb_a, #SiteHeader .gsst_a:focus .gscb_a, #Main gsst_a:hover .gscb_a, #Main .gsst_a:focus .gscb_a {
-    color: #999999 !important; }
+    color: #c9c9c9 !important; }
 
 .articleFooter #fb-root div {
   top: -99999px !important;
