--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -1,7 +1,7 @@
 //color
 $main-color: #909090;
 $body-background-color: #FCFCFC;
-$main-background-color: #FFFFFF;
+$main-background-color: #FEFEFE;
 $header-color: #333333;
 $info-color:#C9C9C9;
 $logo-color:#DDDDDD;
