--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -1,10 +1,10 @@
 //color
 $main-color: #909090;
-$body-background-color: #FCFCFC;
+$body-background-color: #FBFBFB;
 $main-background-color: #FEFEFE;
 $header-color: #333333;
 $info-color:#C9C9C9;
-$logo-color:#DDDDDD;
+$logo-color:#D0D0D0;
 $border-color:#CCCCCC;
 
 //font
