--- a/scss/style.scss
+++ b/scss/style.scss
@@ -110,7 +110,7 @@ h1,h2,h3,h4,h5,h6 {
 		@include layout-side;
 		top: 0;
 		.search {
-
+			margin-bottom: $unit;
 		}
 		#NewlyArticles {
 			.articleHeader {
