--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ blog.s-uni.net Theme is distributed under the terms of the GNU GPL
 
 html, body {
   color: #909090;
-  background-color: #fcfcfc;
+  background-color: #fbfbfb;
   font-family: sans-serif;
   font-size: 14pt; }
 
@@ -60,15 +60,15 @@ h1, h2, h3, h4, h5, h6 {
     #Main #SiteHeader #Logo {
       float: left;
       width: 160px;
-      color: #dddddd;
+      color: #d0d0d0;
       font-family: "Quicksand", sans-serif;
       font-size: 14pt;
       line-height: 44px; }
       #Main #SiteHeader #Logo a {
-        color: #dddddd;
+        color: #d0d0d0;
         text-decoration: none; }
         #Main #SiteHeader #Logo a:hover, #Main #SiteHeader #Logo a:active, #Main #SiteHeader #Logo a:visited, #Main #SiteHeader #Logo a:focus {
-          color: #dddddd;
+          color: #d0d0d0;
           text-decoration: none; }
     #Main #SiteHeader nav {
       margin: 0 0 0 auto;
@@ -87,6 +87,8 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     left: 640px;
     top: 0; }
+    #Main #Side .search {
+      margin-bottom: 44px; }
     #Main #Side #NewlyArticles .articleHeader {
       margin-bottom: 11px; }
       #Main #Side #NewlyArticles .articleHeader .articleTitle {
