--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -18,6 +18,7 @@ $logo-font-size: 14pt;
 $logo-font-family: 'Quicksand', sans-serif;
 $list-font-size: 14pt;
 $list-info-font-size: 10pt;
+$footer-font-size: 12pt;
 
 //margin alignment
 $margin-align-center: 0 auto;
