--- a/style.css
+++ b/style.css
@@ -85,8 +85,9 @@ h1, h2, h3, h4, h5, h6 {
   #Main #Side {
     width: 296px;
     padding: 22px;
-    position: absolute;
-    left: 640px;
+    position: fixed;
+    left: 50%;
+    margin-left: 320px;
     top: 0; }
     #Main #Side .search {
       margin-bottom: 44px; }
