--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -31,7 +31,7 @@ $max-width: 980px;
 $side-width: $max-width - $main-width;
 
 $unit: 44px;
-$site-header-height: $unit;
+$site-header-height: $unit * 3;
 $header-margin: $unit;
 
 
