--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-block;
     color: #c9c9c9;
     font-family: "Quicksand", sans-serif;
-    font-size: 16pt; }
+    font-size: 16pt;
+    height: 32pt; }
 
 #Main {
   width: 596px;
@@ -58,14 +59,14 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 22px 22px;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.03); }
   #Main #SiteHeader {
-    height: 132px; }
+    height: 88px; }
     #Main #SiteHeader #Logo {
       float: left;
       width: 160px;
       color: #d0d0d0;
       font-family: "Quicksand", sans-serif;
       font-size: 14pt;
-      line-height: 132px; }
+      line-height: 88px; }
       #Main #SiteHeader #Logo a {
         color: #d0d0d0;
         text-decoration: none; }
@@ -100,7 +101,8 @@ h1, h2, h3, h4, h5, h6 {
       #Main #Side #NewlyArticles .articleHeader a.articleTitle {
         text-decoration: none; }
       #Main #Side #NewlyArticles .articleHeader .articleDate {
-        font-size: 10pt; }
+        font-size: 10pt;
+        height: 14pt; }
 
 #SiteFooter {
   width: 596px;
