--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,6 +58,7 @@ h1,h2,h3,h4,h5,h6 {
 		font-family: $info-font-family;
 		font-size: $info-font-size;
 		height: $header-font-size;
+		vertical-align: middle;
 	}
 }
 
