--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ h1, h2, h3, h4, h5, h6 {
     color: #c9c9c9;
     font-family: "Quicksand", sans-serif;
     font-size: 16pt;
-    height: 32pt; }
+    height: 32pt;
+    vertical-align: middle; }
 
 #Main {
   width: 596px;
